force-app/main/default/objects/Talc__c/Talc__c.object-meta.xml
<CustomObject>
    <label>Talc</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>