force-app/main/default/objects/Talc__c/fields/Access_to_Medical_and_Pathology_records__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Medical_and_Pathology_records__c</fullName>
    <label>Access to Medical and Pathology records</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>