force-app/main/default/objects/Talc__c/fields/Additional_information_regarding_claim__c.field-meta.xml
<CustomField>
    <fullName>Additional_information_regarding_claim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there any additional information you would like to provide your attorneys regarding your claim?*</description>
    <inlineHelpText>Is there any additional information you would like to provide your attorneys regarding your claim?</inlineHelpText>
    <label>Additional information regarding claim</label>
    <type>Checkbox</type>
</CustomField>