force-app/main/default/objects/Talc__c/fields/Age_at_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Age_at_diagnosis__c</fullName>
    <label>Age at diagnosis</label>
    <length>10768</length>
    <type>LongTextArea</type>
</CustomField>