force-app/main/default/objects/Talc__c/fields/Any_other_significant_exposure__c.field-meta.xml
<CustomField>
    <fullName>Any_other_significant_exposure__c</fullName>
    <label>Any other significant exposure?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>