force-app/main/default/objects/Talc__c/fields/Best_number_to_reach_you_at__c.field-meta.xml
<CustomField>
    <fullName>Best_number_to_reach_you_at__c</fullName>
    <description>In case we get disconnected, what is the best number to reach you at?*</description>
    <inlineHelpText>In case we get disconnected, what is the best number to reach you at?*</inlineHelpText>
    <label>Best number to reach you at?</label>
    <type>Phone</type>
</CustomField>