force-app/main/default/objects/Talc__c/fields/Best_Time_to_Reach__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Reach__c</fullName>
    <label>Best Time to Reach</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>