force-app/main/default/objects/Talc__c/fields/Breast_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Breast_cancer_Address__c</fullName>
    <label>Breast cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>