force-app/main/default/objects/Talc__c/fields/Calling_for_yourself_or_someone_else__c.field-meta.xml
<CustomField>
    <fullName>Calling_for_yourself_or_someone_else__c</fullName>
    <description>Are you calling about an injury you have suffered or that someone else has suffered from using talcum powder?*</description>
    <inlineHelpText>Are you calling about an injury you have suffered or that someone else has suffered from using talcum powder?*</inlineHelpText>
    <label>Calling for yourself or someone else</label>
    <length>255</length>
    <type>Text</type>
</CustomField>