force-app/main/default/objects/Talc__c/fields/Cancer_Stage_at_Dx__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Stage_at_Dx__c</fullName>
    <description>If you were Dx with Ovarian, Fallopian tube or Primary Peritoneal Cancer, what was the stage of the cancer at Dx?</description>
    <inlineHelpText>If you were Dx with Ovarian, Fallopian tube or Primary Peritoneal Cancer, what was the stage of the cancer at Dx?</inlineHelpText>
    <label>Cancer Stage at Dx</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stage I</fullName>
            </value>
            <value>
                <fullName>Stage II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>