force-app/main/default/objects/Talc__c/fields/Cancer_Treatment_History__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Treatment_History__c</fullName>
    <label>Cancer Treatment History</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chemotherapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>