force-app/main/default/objects/Talc__c/fields/Cancer_Type_at_Dx__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Type_at_Dx__c</fullName>
    <label>Cancer Type at Dx</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High-Grade Serous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>