force-app/main/default/objects/Talc__c/fields/Carcinosarcoma_Address__c.field-meta.xml
<CustomField>
    <fullName>Carcinosarcoma_Address__c</fullName>
    <label>Carcinosarcoma (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>