force-app/main/default/objects/Talc__c/fields/Cell_phone_or_landline__c.field-meta.xml
<CustomField>
    <fullName>Cell_phone_or_landline__c</fullName>
    <description>Is this a cell phone or landline? *</description>
    <inlineHelpText>Is this a cell phone or landline? *</inlineHelpText>
    <label>Cell phone or landline?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cell phone</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>