force-app/main/default/objects/Talc__c/fields/Cervical_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Cervical_cancer_Address__c</fullName>
    <label>Cervical cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>