force-app/main/default/objects/Talc__c/fields/Claim_Pursuit_Decision__c.field-meta.xml
<CustomField>
    <fullName>Claim_Pursuit_Decision__c</fullName>
    <description>I&apos;m assuming this phone call is when you learned of a potential connection between  your diagnosis and the powder, and decided to pursue a claim, is that correct?</description>
    <inlineHelpText>I&apos;m assuming this phone call is when you learned of a potential connection between  your diagnosis and the powder, and decided to pursue a claim, is that correct?</inlineHelpText>
    <label>Claim Pursuit Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>