force-app/main/default/objects/Talc__c/fields/Confirm_inormation_to_be_true__c.field-meta.xml
<CustomField>
    <fullName>Confirm_inormation_to_be_true__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Our legal team wants you to know that we confirm identity and all the personal information and history you have provided is accurate. We take on the responsibility of representing people with the greatest care. As your potential legal team, we must ensure that the people we fight for are fully transparent with us at all times so that we can best represent them. Do you confirm this to be true?*</description>
    <inlineHelpText>Our legal team wants you to know that we confirm identity and all the personal information and history you have provided is accurate. We take on the responsibility of representing people with the greatest care. As your potential legal team, we must ensure that the people we fight for are fully transparent with us at all times so that we can best represent them. Do you confirm this to be true?*</inlineHelpText>
    <label>Confirm inormation to be true?</label>
    <type>Checkbox</type>
</CustomField>