force-app/main/default/objects/Talc__c/fields/Current_Legal_Representation__c.field-meta.xml
<CustomField>
    <fullName>Current_Legal_Representation__c</fullName>
    <label>Current Legal Representation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>