force-app/main/default/objects/Talc__c/fields/Current_State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Current_State_of_Residence__c</fullName>
    <label>Current State of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>