force-app/main/default/objects/Talc__c/fields/Currently_Smoke_Cigarettes__c.field-meta.xml
<CustomField>
    <fullName>Currently_Smoke_Cigarettes__c</fullName>
    <label>Currently Smoke Cigarettes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>