force-app/main/default/objects/Talc__c/fields/Date_of_Dx_Rel_2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Dx_Rel_2__c</fullName>
    <label>Date of Dx - Rel 2</label>
    <type>Date</type>
</CustomField>