force-app/main/default/objects/Talc__c/fields/Diagnosed_with_Obesity_Overweight__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_with_Obesity_Overweight__c</fullName>
    <label>Diagnosed with Obesity Overweight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>