force-app/main/default/objects/Talc__c/fields/Diagnosed_with_Other_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_with_Other_Cancer__c</fullName>
    <label>Diagnosed with Other Cancer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>