force-app/main/default/objects/Talc__c/fields/Diagnosing_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Diagnosing_Doctor__c</fullName>
    <description>What is the name of the Doctor that gave the diagnosis?</description>
    <inlineHelpText>What is the name of the Doctor that gave the diagnosis?</inlineHelpText>
    <label>Diagnosing Doctor</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>