force-app/main/default/objects/Talc__c/fields/Diagnosis_date_less_than_4_years__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_date_less_than_4_years__c</fullName>
    <description>Was the diagnosis date less than four years after initial use?</description>
    <inlineHelpText>Was the diagnosis date less than four years after initial use?</inlineHelpText>
    <label>Diagnosis date less than 4 years?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>