force-app/main/default/objects/Talc__c/fields/Diagnosis_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Hospital__c</fullName>
    <description>What hospital was the diagnosis made at?</description>
    <inlineHelpText>What hospital was the diagnosis made at?</inlineHelpText>
    <label>Diagnosis Hospital</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>