force-app/main/default/objects/Talc__c/fields/Do_you_have_a_smartphone__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_smartphone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have a smartphone? This helps us know how to communicate with you. -- Individual</description>
    <inlineHelpText>Do you have a smartphone? This helps us know how to communicate with you.</inlineHelpText>
    <label>Do you have a smartphone?</label>
    <type>Checkbox</type>
</CustomField>