force-app/main/default/objects/Talc__c/fields/Dropbox_Sign_Template__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Sign_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dropbox Sign Template</label>
    <referenceTo>HelloSign__Template__c</referenceTo>
    <relationshipLabel>Talcs</relationshipLabel>
    <relationshipName>Talcs</relationshipName>
    <type>Lookup</type>
</CustomField>