force-app/main/default/objects/Talc__c/fields/Endometrial_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Endometrial_cancer_Address__c</fullName>
    <label>Endometrial cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>