force-app/main/default/objects/Talc__c/fields/Endometriosis_Address__c.field-meta.xml
<CustomField>
    <fullName>Endometriosis_Address__c</fullName>
    <label>Endometriosis (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>