force-app/main/default/objects/Talc__c/fields/Explain_how_you_know_product_applied__c.field-meta.xml
<CustomField>
    <fullName>Explain_how_you_know_product_applied__c</fullName>
    <label>Explain how you know product applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>