force-app/main/default/objects/Talc__c/fields/Explanation_how_product_applied__c.field-meta.xml
<CustomField>
    <fullName>Explanation_how_product_applied__c</fullName>
    <label>Explanation how product applied</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>