force-app/main/default/objects/Talc__c/fields/Exposed_at_work__c.field-meta.xml
<CustomField>
    <fullName>Exposed_at_work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exposed at work?</label>
    <type>Checkbox</type>
</CustomField>