force-app/main/default/objects/Talc__c/fields/Facility_Address_OC_Prov_3__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address_OC_Prov_3__c</fullName>
    <label>Facility Address - OC Prov 3</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>