force-app/main/default/objects/Talc__c/fields/Facility_Address_Prov_2__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address_Prov_2__c</fullName>
    <label>Facility Address - Prov 2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>