force-app/main/default/objects/Talc__c/fields/Facility_Name_OC_Prov_2__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_OC_Prov_2__c</fullName>
    <label>Facility Name - OC Prov 2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>