force-app/main/default/objects/Talc__c/fields/Facility_Name_Prov_1__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_Prov_1__c</fullName>
    <label>Facility Name - Prov 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>