force-app/main/default/objects/Talc__c/fields/Fallopian_tube_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Fallopian_tube_cancer_Address__c</fullName>
    <label>Fallopian tube cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>