force-app/main/default/objects/Talc__c/fields/Fallopian_Tubes_Removed_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Fallopian_Tubes_Removed_Surgery__c</fullName>
    <description>Were your fallopian tubes removed in that surgery?</description>
    <inlineHelpText>Were your fallopian tubes removed in that surgery?</inlineHelpText>
    <label>Fallopian Tubes Removed Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>