force-app/main/default/objects/Talc__c/fields/Family_History_Genetic_Mutations__c.field-meta.xml
<CustomField>
    <fullName>Family_History_Genetic_Mutations__c</fullName>
    <description>Limiting this question to blood relatives, to the best of your knowledge, please indicate whether your  parents, siblings, children, grandparents, aunts, uncles, or first cousins have ever been diagnosed with  any genetic mutations, including but not limited to BRCA1 or BRCA2 mutations? (REL BRCA 1)</description>
    <label>Family History Genetic Mutations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>