force-app/main/default/objects/Talc__c/fields/Family_History_Ovarian_Breast_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Family_History_Ovarian_Breast_Cancer__c</fullName>
    <description>Limiting this question to blood relatives, to the best of your knowledge, Do you have any  parents,  siblings, children, grandparents, aunts, uncles, or first cousins have ever suffered from or been treated for (ONLY) ovarian cancer or breast cancer?</description>
    <label>Family History Ovarian Breast Cancer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>