force-app/main/default/objects/Talc__c/fields/Filed_Claim_in_Imerys_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Filed_Claim_in_Imerys_Bankruptcy__c</fullName>
    <label>Filed Claim in Imerys Bankruptcy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>