force-app/main/default/objects/Talc__c/fields/Filed_Lawsuit_for_Ovarian_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Filed_Lawsuit_for_Ovarian_Cancer__c</fullName>
    <label>Filed Lawsuit for Ovarian Cancer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>