force-app/main/default/objects/Talc__c/fields/First_diagnosed_breast_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_breast_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with breast cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with breast cancer?*</inlineHelpText>
    <label>First diagnosed - breast cancer</label>
    <type>Date</type>
</CustomField>