force-app/main/default/objects/Talc__c/fields/First_diagnosed_carcinosarcoma__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_carcinosarcoma__c</fullName>
    <description>Approximately when were you first diagnosed with carcinosarcoma?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with carcinosarcoma?*</inlineHelpText>
    <label>First diagnosed - carcinosarcoma?</label>
    <type>Date</type>
</CustomField>