force-app/main/default/objects/Talc__c/fields/First_diagnosed_cervical_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_cervical_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with cervical cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with cervical cancer?*</inlineHelpText>
    <label>First diagnosed - cervical cancer</label>
    <type>Date</type>
</CustomField>