force-app/main/default/objects/Talc__c/fields/First_diagnosed_endometerial_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_endometerial_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with endometerial cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with endometerial cancer?*</inlineHelpText>
    <label>First diagnosed - endometerial cancer</label>
    <type>Date</type>
</CustomField>