force-app/main/default/objects/Talc__c/fields/First_diagnosed_endometriosis__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_endometriosis__c</fullName>
    <description>Approximately when were you first diagnosed with endometriosis?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with endometriosis?*</inlineHelpText>
    <label>First diagnosed - endometriosis</label>
    <type>Date</type>
</CustomField>