force-app/main/default/objects/Talc__c/fields/First_diagnosed_fallopian_tube__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_fallopian_tube__c</fullName>
    <description>Approximately when were you first diagnosed with fallopian tube cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with fallopian tube cancer?*</inlineHelpText>
    <label>First diagnosed - fallopian tube</label>
    <type>Date</type>
</CustomField>