force-app/main/default/objects/Talc__c/fields/First_diagnosed_hysterectomy__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_hysterectomy__c</fullName>
    <description>Approximately when were you first diagnosed with hysterectomy?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with hysterectomy?*</inlineHelpText>
    <label>First diagnosed - hysterectomy</label>
    <type>Date</type>
</CustomField>