force-app/main/default/objects/Talc__c/fields/First_diagnosed_lung_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_lung_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with lung cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with lung cancer?*</inlineHelpText>
    <label>First diagnosed - lung cancer</label>
    <type>Date</type>
</CustomField>