force-app/main/default/objects/Talc__c/fields/First_diagnosed_mesothelioma__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_mesothelioma__c</fullName>
    <description>Approximately when were you first diagnosed with mesothelioma?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with mesothelioma?*</inlineHelpText>
    <label>First diagnosed - mesothelioma</label>
    <type>Date</type>
</CustomField>