force-app/main/default/objects/Talc__c/fields/First_diagnosed_omentum_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_omentum_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with omentum cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with omentum cancer?*</inlineHelpText>
    <label>First diagnosed - omentum cancer?</label>
    <type>Date</type>
</CustomField>