force-app/main/default/objects/Talc__c/fields/First_diagnosed_ovarian_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_ovarian_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with ovarian cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with ovarian cancer?*</inlineHelpText>
    <label>First diagnosed - ovarian cancer</label>
    <type>Date</type>
</CustomField>