force-app/main/default/objects/Talc__c/fields/First_diagnosed_primary_peritoneal__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_primary_peritoneal__c</fullName>
    <description>Approximately when were you first diagnosed with primary peritoneal cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with primary peritoneal cancer?*</inlineHelpText>
    <label>First diagnosed - primary peritoneal</label>
    <type>Date</type>
</CustomField>