force-app/main/default/objects/Talc__c/fields/First_diagnosed_uterine_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_uterine_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with uterine cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with uterine cancer?*</inlineHelpText>
    <label>First diagnosed - uterine cancer</label>
    <type>Date</type>
</CustomField>