force-app/main/default/objects/Talc__c/fields/First_diagnosed_uterine_fibroid__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_uterine_fibroid__c</fullName>
    <description>Approximately when were you first diagnosed with uterine fibroid*</description>
    <inlineHelpText>Approximately when were you first diagnosed with uterine fibroid*</inlineHelpText>
    <label>First diagnosed - uterine fibroid</label>
    <type>Date</type>
</CustomField>