force-app/main/default/objects/Talc__c/fields/First_diagnosed_vaginal_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_vaginal_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with vaginal cancer? *</description>
    <inlineHelpText>Approximately when were you first diagnosed with vaginal cancer? *</inlineHelpText>
    <label>First diagnosed - vaginal cancer</label>
    <type>Date</type>
</CustomField>