force-app/main/default/objects/Talc__c/fields/First_diagnosed_vulvar_cancer__c.field-meta.xml
<CustomField>
    <fullName>First_diagnosed_vulvar_cancer__c</fullName>
    <description>Approximately when were you first diagnosed with vulvar cancer?*</description>
    <inlineHelpText>Approximately when were you first diagnosed with vulvar cancer?*</inlineHelpText>
    <label>First diagnosed - vulvar cancer?</label>
    <type>Date</type>
</CustomField>