force-app/main/default/objects/Talc__c/fields/First_Use_Date_Pharmacy_1__c.field-meta.xml
<CustomField>
    <fullName>First_Use_Date_Pharmacy_1__c</fullName>
    <label>First Use Date - Pharmacy 1</label>
    <type>Date</type>
</CustomField>