force-app/main/default/objects/Talc__c/fields/First_Visit_Year_OC_Prov_1__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Year_OC_Prov_1__c</fullName>
    <label>First Visit Year - OC Prov 1</label>
    <type>Date</type>
</CustomField>