force-app/main/default/objects/Talc__c/fields/First_Visit_Year_Prov_3__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Year_Prov_3__c</fullName>
    <label>First Visit Year - Prov 3</label>
    <type>Date</type>
</CustomField>