force-app/main/default/objects/Talc__c/fields/Formally_Released__c.field-meta.xml
<CustomField>
    <fullName>Formally_Released__c</fullName>
    <label>Formally Released</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>