force-app/main/default/objects/Talc__c/fields/Had_a_Tubal_Ligation__c.field-meta.xml
<CustomField>
    <fullName>Had_a_Tubal_Ligation__c</fullName>
    <label>Had a Tubal Ligation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>